2010-10-16 mmichaud <michael.michaud@free.fr>
    * try to fix bug 3085542. Needs to check if there is no side effects 

2010-10-14 mmichaud <michael.michaud@free.fr>
    * fixed the way RangeColorTheming works (it was something close to quantile,
      it is now equal intervals).

2010-10-09 mmichaud <michael.michaud@free.fr>
    * slight change in the way ExtractLayerByGeometryType handle empty geometries
    * better handling of empty geometries in shapefile reader/writer
      (empty geometries were already read, except for Point geometries, but
       were not correctly write)

2010-10-06 mmichaud <michael.michaud@free.fr>
    * Improve speed of LayerTableModel#removeAll

2010-10-02 mmichaud <michael.michaud@free.fr>
    * Fixed a bug in LayerPropertiesPlugIn introduced by charset handling

2010-09-30 mmichaud <michael.michaud@free.fr>
    * Fixed a bug in AffineTransformationPlugIn due to french language file
      Prepare migration from jump's AffineTransformation to JTS's

2010-09-21 Matthias Scholz <ms@jammerhund.de>
	* Added OptionPanel for dataset options -> showing charset selection or not
		* added org.openjump.core.ui.DatasetOptionsPanel
		* com.vividsolutions.jump.workbench.ui.plugin.OptionsPlugIn
			* added DatasetOptionsPanel
		* org.openjump.OpenJumpConfiguration
			* charset Option now depends on the settings in the options
		* com.vividsolutions.jump.workbench.datasource.InstallStandardDataSourceQueryChoosersPlugIn
			* changed getSouthComponent1()
		* improved org.openjump.core.ui.io.file.AbstractFileLayerLoader
			* added removeOption() methods
		* org.openjump.core.ui.io.file.Option
			* added/overwrite equals() method for org.openjump.core.ui.io.file.AbstractFileLayerLoader.removeOption()
		* translation, keys added:
			* ui.DatasetOptionsPanel.datasetOptions
			* ui.DatasetOptionsPanel.ShowCharsetSelection

2010-09-06 Matthias Scholz <ms@jammerhund.de>
	* Changes for save dataset as shapefile / fieldnames with charset settings